<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aula7.parcial1.MainActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">


    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="690dp"
        android:layout_marginTop="3dp"
        android:background="@color/colorFondo"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="-11dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:id="@+id/button1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/contacto1"
                android:layout_width="224dp"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:text="@string/contacto1"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:id="@+id/button2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/id_tv_question"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.32"
                android:text="@string/contacto1"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:id="@+id/button3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/contacto2"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.32"
                android:text="@string/contacto3"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:id="@+id/button4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/contacto3"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.32"
                android:text="@string/contacto4"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:id="@+id/button5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/contacto4"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.32"
                android:text="@string/contacto5"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:id="@+id/button6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/contacto5"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.32"
                android:text="@string/contacto6"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:id="@+id/button7"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/contacto6"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.32"
                android:text="@string/contacto7"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:id="@+id/button8"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/contacto7"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.32"
                android:text="@string/contacto8"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
